# fractals-in-OpenGL

./: .gitignore
JuliaSet/: CMakeLists.txt  main.cpp  play_around.cpp  shader.cpp  shader.frag  shader.h  trippy_animation.cpp
MandelbrotSet/: CMakeLists.txt  main.cpp  shader.cpp  shader.frag
OpenGL/: tutorial_1.cpp  tutorial_2.cpp
utils/: base_setup.cpp
